# madhats-aidesign

./: .env.example  .gitignore  CLAUDE.md  MadHats_AI_Design_Studio_Build_Brief.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  db.py  main.py  prompts.py  storage.py
backend/app/api/: deps.py
backend/app/data/: stub_catalogue.py
backend/app/models/: canvas.py  decoration_type.py  generation.py  (+8 more)
backend/supabase/: config.toml  seed.sql
backend/tests/: canvas_step_helpers.py  test_admin_auth_routes.py  test_admin_auth_service.py  test_admin_context.py  test_admin_generations_list.py  test_admin_hat_types.py  test_admin_leads.py  test_admin_list_scoping.py  test_admin_prompt.py  test_admin_quote_render.py  test_admin_scoped_config.py  test_admin_session_canvas_faces.py  test_admin_settings.py  test_admin_store_branding.py  test_admin_store_logo.py  test_admin_stores_scoping.py  test_admin_users_routes.py  test_admin_users_service.py  test_backfill.py  test_blank_flow_orchestration.py  test_blank_session.py  test_branding.py  test_branding_canvas_intro.py  test_brief.py  test_canvas_conversation.py  test_canvas_describe.py  test_canvas_describe_assetpath.py  test_canvas_edit.py  test_canvas_generation.py  test_canvas_refine.py  test_canvas_routes.py  test_canvas_steps.py  test_canvas_view_images.py  test_catalogue_sync_views.py  test_chat_route.py  test_chat_route_dispatch.py  test_colours.py  test_components.py  test_composite.py  test_composite_route.py  (+59 more)
(+317 files in other folders)
